Particles with disabled lattice modifier produce unclear feature #51523

Closed
opened 2017-05-16 21:11:36 +02:00 by Serge Lyatin · 9 comments

System Information
Win7 64bit

Blender Version
Broken: 2.78c

Short description of error
Normally lattice controls both emitter and particles, but disabled Lattice modifier affects particles only, without emitting object. This is cool feature, but there is no information that it could behave like this.
I think, if something is disabled - it shouldn't confuse things.

Exact steps for others to reproduce the error
Just open the file. Another way to reproduce this feature is to enable Lattice modifier, but set Strength slider to zero.
Lattice_particles.blend

**System Information** Win7 64bit **Blender Version** Broken: 2.78c **Short description of error** Normally lattice controls both emitter and particles, but disabled *Lattice modifier* affects particles only, without emitting object. This is cool feature, but there is no information that it could behave like this. I think, if something is disabled - it shouldn't confuse things. **Exact steps for others to reproduce the error** Just open the file. Another way to reproduce this feature is to enable *Lattice modifier*, but set *Strength* slider to zero. [Lattice_particles.blend](https://archive.blender.org/developer/F600233/Lattice_particles.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL

Added subscriber: @zeauro

Added subscriber: @zeauro

Particles deformed by lattice is a useful feature. Especially for emitter particles with physics, that allows to easily define flows for particles with erratic movements.

Here for "none" particles supposed to stay sticked to surface, problem can be avoïded by changing modifiers order and by using lattice modifier before particles one.

You are right. You are describing a useful tip that does not correspond to a logical behaviour of modifier.

It would be consistent to add a particle icon to modifiers header to enable and disable modifier effect on particles.
But it is an UI lack that is not really blocking.
So, it should have a low priority status.

Particles deformed by lattice is a useful feature. Especially for emitter particles with physics, that allows to easily define flows for particles with erratic movements. Here for "none" particles supposed to stay sticked to surface, problem can be avoïded by changing modifiers order and by using lattice modifier before particles one. You are right. You are describing a useful tip that does not correspond to a logical behaviour of modifier. It would be consistent to add a particle icon to modifiers header to enable and disable modifier effect on particles. But it is an UI lack that is not really blocking. So, it should have a low priority status.
Member

Added subscriber: @LucaRood-3

Added subscriber: @LucaRood-3
Luca Rood self-assigned this 2017-05-22 12:42:40 +02:00
Member

This is not a feature. Particles are simply ignoring the modifier options when doing the lattice computation. Disabling the lattice modifier should stop it from having any effect on anything on that object.

This is not a feature. Particles are simply ignoring the modifier options when doing the lattice computation. Disabling the lattice modifier should stop it from having any effect on anything on that object.
Author

I like the idea to add slider for the particles. It is quite usefull, when you want to give an offset for origin of the particle object to put it below/above emitter's face.

I like the idea to add slider for the particles. It is quite usefull, when you want to give an offset for origin of the particle object to put it below/above emitter's face.

This issue was referenced by 56422ff6c3

This issue was referenced by 56422ff6c3f333a454402b0076948f1d5f7e739c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51523
No description provided.