Fix T51523: Lattice modifier affecting particles even when disabled

Particles were ignoring the lattice modifier visibility, and
"influence" property.